Tue Oct  4 14:44:28 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Scheduler/Events/Action_Base.cpp:

          Reduce log priority of certain error messages.

Tue Aug 23 18:17:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepared for next release

Tue Aug 23 19:01:44 CEST 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE version 1.0.4 released.

Fri Jul 29 14:18:54 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * dance/LocalityManager/Configuration/CPU_Affinity.cpp:

          unfuzz.

Wed Jul 27 08:45:22 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Configuration/CPU_Affinity.cpp:
        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

        Fixes to address crashing issues on some platforms.

Sun Jul 10 16:21:29 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/Error_Documentation/index.html:

          Fuzz.

Thu Jul  7 20:38:10 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Configuration/Process_Name.cpp:

          Updated to address a glibc error in some Linux distributions.

Thu Jun 30 10:36:59 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/Error_Documentation:
        * docs/Error_Documentation/Checked.png:
        * docs/Error_Documentation/Collapsed.png:
        * docs/Error_Documentation/Expanded.png:
        * docs/Error_Documentation/LeafRowHandle.png:
        * docs/Error_Documentation/Mixed.png:
        * docs/Error_Documentation/Unchecked.png:
        * docs/Error_Documentation/blank.png:
        * docs/Error_Documentation/index.html:
        * docs/Error_Documentation/outliner.js:

          Updated error documentation.

        * docs/sources/Error_Documentation.oo3:
        * docs/sources/Error_Documentation.oo3/contents.xml:

          Source document for the error documentation.
