@@ -1,3 +1,14 @@
+Tue Oct  4 19:42:56 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * dance/LocalityManager/Daemon/Locality_Manager_Impl.h:
+        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
+        * dance/LocalityManager/Daemon/Locality_Manager_Task.h:
+        * dance/LocalityManager/Daemon/Locality_Manager_Task.cpp:
+        * dance/LocalityManager/Scheduler/Plugin_Manager.h:
+        * dance/LocalityManager/Scheduler/Plugin_Manager.cpp:
+
+          Resolved some memory leaks in the pugin subsystem.
+
 Tue Oct  4 14:44:28 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * dance/LocalityManager/Scheduler/Events/Action_Base.cpp:
